# skillctl

./: .gitignore  AGENTS.md  Makefile  README.ko-kr.MD  README.md
.context/: PROJECT.md  STEERING.md  TASKS.md
.github/workflows/: ci.yml  release-build.yml
docs/superpowers/plans/: 2026-07-05-skillctl.md
rust/: Cargo.toml
rust/skillctl-cli/: Cargo.toml  build.rs
rust/skillctl-cli/src/: cli.rs  main.rs  version.rs
rust/skillctl-cli/tests/: smoke.rs
rust/skillctl-core/: Cargo.toml
rust/skillctl-core/src/: config.rs  doctor.rs  error.rs  fs.rs  lib.rs  lockfile.rs  model.rs  plan.rs  render.rs  resolve.rs  sources.rs
